kiama/src/org/kiama/example/oberon0/L0/tests/intoverflow.out
* errors
[8.13] error: integer will not fit into 32 bits

    avar := 2147483648    

            ^
